# rawgentic-memorypalace

./: .gitignore  .rawgentic.json  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: mirror-to-stars.yml
deploy/: docker-compose.yml
docs/: frontend-decision.md
docs/migration/: post-bulk-mine-status.txt  pre-migration-status.txt  settings.json.after-cutover
docs/superpowers/plans/: 2026-04-14-mempalace-integration.md
frontend/: .env.example  docker-compose.yml
hooks/: hooks.json  lib.sh  mempalace-hook-wrapper.sh  post-tool-use  session-start  stop  user-prompt-submit
rawgentic_memory/: __init__.py  adapter.py  backend.py  enrichment.py  mempalace_backend.py  models.py  native_backend.py  server.py  wakeup.py
skills/memory-ui/: SKILL.md
skills/recall/: SKILL.md
skills/upgrade/: SKILL.md
tests/: canary.py  conftest.py  test_adapter.py  test_backend.py  test_enrichment.py  test_frontend_compose.py  test_frontend_decision.py  test_hook_output_schema.py  test_hooks.py  test_kg_endpoints.py  test_lazy_start.py  test_lib_sh.py  test_memory_ui_skill.py  test_mempalace_backend.py  test_native_backend.py  test_plugin_structure.py  test_portable_hooks.py  test_recall_skill.py  test_reindex.py  test_server.py  test_server_endpoints.py  test_server_slim.py  test_wakeup.py
tests/integration/: __init__.py  test_acceptance_criteria.py  test_concurrent_writes.py  test_graceful_degradation.py  test_hook_timeouts.py  test_version_boundary.py
(+1 files in other folders)
