[project]
name = "rawgentic-memorypalace"
version = "0.1.0"
description = "Claude Code plugin providing long-term memory via dual backends (native ChromaDB + MemPalace) with A/B comparison framework"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "chromadb>=0.5.0,<0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
