[project]
name = "rawgentic-memorypalace"
version = "0.1.0"
description = "Claude Code plugin providing long-term memory via dual backends (native ChromaDB + MemPalace) with A/B comparison framework"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "mempalace>=3.3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["rawgentic_memory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
